Scrolling issues on mobile

--- a/src/Website/Company.Website/Shared/MainLayout.razor.css
+++ b/src/Website/Company.Website/Shared/MainLayout.razor.css
@@ -1,16 +1,6 @@
-.main {
-    flex: 1;
-    position: absolute;
-    top: 3.5rem;
-    height: calc(100vh - 3.5rem);
-    overflow: scroll;
-    width: 100%;
-    overflow-x: hidden;
-}
-
 .top-row {
     height: 3.5rem;
-    position: absolute;
+    position: fixed;
     width: 100%;
     display: flex;
     align-items: center;
@@ -18,6 +8,18 @@
     background-color: var(--slate-blue);
     border-bottom: 1px solid #d6d5d5;
     justify-content: left;
+}
+
+.main {
+    flex: 1;
+    margin-top: 3.5rem;
+    overflow: scroll;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.content {
+    margin-top: 4rem;
 }
 
 .top-row > a, .main .top-row .btn-link {
